--- a/app/blocks/facility-list/facility-list.scss
+++ b/app/blocks/facility-list/facility-list.scss
@@ -110,4 +110,23 @@
       }
     }
   }
+
+  &_xsmall {
+    #{$b} {
+
+      &__item {
+        @include rule(margin-bottom, (xl: 22px, xlg: 22, lg: 22, md: 18, sm: 16));
+      }
+
+      &__name {
+        @include rule(font-size, (xl: 15px, xlg: 15, lg: 15, md: 13, sm: 15));
+        @include rule(line-height, (xl: 26px, xlg: 26, lg: 26, md: 26, sm: 26));
+      }
+
+      &__icon {
+        @include rule(width, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 18));
+        @include rule(height, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 18));
+      }
+    }
+  }
 }
