--- a/app/blocks/routes/routes.pug
+++ b/app/blocks/routes/routes.pug
@@ -67,3 +67,42 @@ mixin routes()
             +e.name 10 mins
             +e.icon_time
               +icon('car')
+
+
+mixin routes-v2()
+  +b.SECTION.routes-v2&attributes(attributes)
+    +e.TABLE.table
+      tbody
+        +e.TR.row
+          +e.TD.location
+            +e.SPAN.icon
+              +e.IMG(src="assets/images/nd/underground-liverpool.svg")
+            +e.name Liverpool Street
+          +e.TD.time 7 min
+        +e.TR.row
+          +e.TD.location
+            +e.SPAN.icon
+              +e.IMG(src="assets/images/nd/underground-tottenhamm.svg")
+            +e.name Tottenhamm Cour Road
+          +e.TD.time 8 min
+        +e.TR.row
+          +e.TD.location
+            +e.SPAN.icon
+              +e.IMG(src="assets/images/nd/underground-goodge.svg")
+            +e.name Goodge street
+          +e.TD.time 9 mins
+
+    +e.TABLE.table
+      tbody
+        +e.TR.row
+          +e.TD.location
+            +e.SPAN.icon
+              +e.IMG(src="assets/images/nd/nd-bus.svg")
+            +e.name Shoreditch High Street
+          +e.TD.time 9 min
+        +e.TR.row
+          +e.TD.location
+            +e.SPAN.icon
+              +e.IMG(src="assets/images/nd/nd-plane.svg")
+            +e.name City
+          +e.TD.time 9 min
