--- a/app/pages/newest/space/space-v5.pug
+++ b/app/pages/newest/space/space-v5.pug
@@ -21,7 +21,7 @@ block content
   +layout._stable
     +e.column_start._start_space
       +e.wrapper
-        +space-description
+        +space-description-v2
         +space-description-panel
 
         +nd-section
