single space page

--- a/app/blocks/grid/nd-grid.scss
+++ b/app/blocks/grid/nd-grid.scss
@@ -73,6 +73,10 @@
     @include rule(margin-top, (xl: -38px, xlg: -38, lg: -38, md: -38, sm: -23));
   }
 
+  &_int50 {
+    @include rule(margin-top, (xl: -50px, xlg: -50, lg: -50, md: -50, sm: -23));
+  }
+
   &__col {
     display: inline-block; // fallback для старых браузеров
     box-sizing: border-box;
@@ -162,6 +166,10 @@
 
     #{$b}_int38 & {
       @include rule(padding-top, (xl: 38px, xlg: 38, lg: 38, md: 38, sm: 23));
+    }
+
+    #{$b}_int50 & {
+      @include rule(padding-top, (xl: 50px, xlg: 50, lg: 50, md: 50, sm: 23));
     }
   }
 
