--- a/app/blocks/routes/routes.pug
+++ b/app/blocks/routes/routes.pug
@@ -90,7 +90,7 @@ mixin routes-v2()
             +e.SPAN.icon
               +e.IMG(src="assets/images/nd/underground-goodge.svg")
             +e.name Goodge street
-          +e.TD.time 9 mins
+          +e.TD.time 9 min
 
     +e.TABLE.table
       tbody
