--- a/app/blocks/section/nd-section.scss
+++ b/app/blocks/section/nd-section.scss
@@ -512,6 +512,12 @@
       }
     }
 
+    &_mt34 {
+      &:not(:first-child) {
+        @include rule(margin-top, (xl: 34px, xlg: 34, lg: 34, md: 34, sm: 34));
+      }
+    }
+
     &_promo {
       display: flex;
       justify-content: space-between;
@@ -1397,7 +1403,7 @@
           }
 
           &:not(:first-child) {
-            @include rule(margin-top, (xl: 24px, xlg: 24, lg: 24, md: 24, sm: 24));
+            @include rule(margin-top, (xl: 30px, xlg: 30, lg: 30, md: 24, sm: 24));
           }
         }
       }
@@ -1420,7 +1426,7 @@
     // }
 
     &:not(:last-child) {
-      @include rule(margin-bottom, (xl: 67px, xlg: 67, lg: 50, md: 35, sm: 0));
+      @include rule(margin-bottom, (xl: 40px, xlg: 40, lg: 40, md: 35, sm: 0));
     }
   }
 
@@ -1570,6 +1576,10 @@
         width: 100%;
         flex: none;
 
+        &:not(:last-child) {
+          @include rule(margin-bottom, (xl: 24px, xlg: 24, lg: 24, md: 24, sm: 0));
+        }
+
         .address-line {
           &:not(:first-child) {
             @include rule(margin-left, (xl: 20px, xlg: 20, lg: 20, md: 20, sm: 0));
@@ -1596,8 +1606,8 @@
         flex: none;
         margin-bottom: 0;
 
-        @include rule(width, (xl: 369px, xlg: 369, lg: 369, md: 369, sm: 100%));
-        @include rule(margin-left, (xl: 49px, xlg: 49, lg: 49, md: 49, sm: 0));
+        @include rule(width, (xl: 366px, xlg: 366, lg: 300, md: 300, sm: 100%));
+        @include rule(margin-left, (xl: 49px, xlg: 49, lg: 30, md: 30, sm: 0));
 
         &:not(:first-child) {
           margin-top: 0;
