--- a/app/components/layout/layout.scss
+++ b/app/components/layout/layout.scss
@@ -645,7 +645,7 @@
           height: auto;
           overflow: auto;
 
-          @include rule(padding-right, (xl: 41.51%, lg: 47.07%, md: 31.25%, sm: 0));
+          @include cRule(padding-right, (xl: 41.51%, lg: 47.07%, md: 31.25%, sm: 0));
 
           @include screen('md', max, 2) {
             grid-column: 1 / 3;
@@ -673,7 +673,7 @@
           bottom: 0;
           background-color: $nd-color-bg;
 
-          @include rule(width, (xl: calc(100% - 58.49vw), lg: calc(100% - 52.93vw), md: calc(100% - 68.75vw), sm: 0));
+          @include cRule(width, (xl: calc(100% - 58.49vw), lg: calc(100% - 52.93vw), md: calc(100% - 68.75vw), sm: 0));
           @include rule(box-shadow, (xl: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), false), xlg: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), 1660), lg: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), 1366), md: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), 960), sm: none));
         }
       }
