--- a/app/pages/newest/sitemap/redesign-sitemap.pug
+++ b/app/pages/newest/sitemap/redesign-sitemap.pug
@@ -39,6 +39,16 @@ block content
           //-     +nd-link(href="ha-space-messages.html") Spacepool - Host Space - Messages (ha-space-messages.html)
           //-     +nd-link(href="ha-space-manager.html") Spacepool - Host Space - Manager (ha-space-manager.html)
 
+          +e.group
+            +e.head
+              +page-title June 2021 updates
+            +e.list
+              +nd-link(href="search-v3.html") Spacepool - Search (search-v3.html)
+              //- +nd-link(href="search-types-v3.html") Spacepool - Search by offer type (search-types-v3.html)
+              +nd-link(href="space-v5.html") Spacepool - Space (space-v5.html)
+              +nd-link(href="space-v5_nolayout.html") Spacepool - Space  without offer layout (space-v5_nolayout.html)
+              //- +nd-link(href="single-offer.html") Spacepool - Single Offer Page (single-offer.html)
+
           +e.group#nd-new-search
             +e.head
               +page-title Search results and one space pages
@@ -46,9 +56,6 @@ block content
               +nd-link(href="search-v2.html") Spacepool - Search (search-v2.html)
               +nd-link(href="search-types-v2.html") Spacepool - Search by offer type (search-types-v2.html)
               +nd-link(href="space-v4.html") Spacepool - Space (space-v4.html)
-              +nd-link(href="space-v5.html") Spacepool - Space (space-v5.html)
-              +nd-link(href="space-v5_nolayout.html") Spacepool - Space (space-v5_nolayout.html)
-              +nd-link(href="single-offer.html") Spacepool - Space (single-offer.html)
           +e.group#nd-registration
             +e.head
               +page-title Registration Steps
