--- a/app/styles/helpers/_mixins.scss
+++ b/app/styles/helpers/_mixins.scss
@@ -407,7 +407,7 @@ div {
     }
 
     @else {
-      @include screen('#{$breakpoint}', $direction) {
+      @include screen('#{$breakpoint}', $direction, 2) {
         #{$name}: #{$value};
       }
     }
