--- a/app/blocks/facility-list/facility-list.scss
+++ b/app/blocks/facility-list/facility-list.scss
@@ -3,29 +3,12 @@
 
   display: block;
   width: 100%;
-  column-count: 4;
-  column-gap: 30px;
   color: $nd-color-basic;
   fill: currentColor;
   column-fill: balance;
 
-  @include screen('xlg', max, 2) {
-    column-count: 3;
-    column-gap: pxtovw(30, 1660);
-  }
-
-  @include screen('lg', max, 2) {
-    column-gap: pxtovw(30, 1366);
-  }
-
-  @include screen('md', max, 2) {
-    column-gap: pxtovw(30, 960);
-  }
-
-  @include screen('sm', max, 2) {
-    column-gap: pxtovw(15, 375);
-    column-count: 2;
-  }
+  @include rule(column-gap, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 15));
+  @include cRule(column-count, (xl: 4, xlg: 3, sm: 2));
 
   &__item {
     display: flex;
@@ -112,15 +95,21 @@
   }
 
   &_xsmall {
+    @include rule(column-gap, (xl: 60px, xlg: 60, lg: 60, md: 30, sm: 15));
+
     #{$b} {
 
       &__item {
-        @include rule(margin-bottom, (xl: 22px, xlg: 22, lg: 22, md: 18, sm: 16));
+        @include rule(margin-bottom, (xl: 17px, xlg: 17, lg: 17, md: 17, sm: 16));
       }
 
       &__name {
         @include rule(font-size, (xl: 15px, xlg: 15, lg: 15, md: 13, sm: 15));
         @include rule(line-height, (xl: 26px, xlg: 26, lg: 26, md: 26, sm: 26));
+
+        &:not(:first-child) {
+          @include rule(margin-left, (xl: 22px, xlg: 22, lg: 22, md: 22, sm: 13));
+        }
       }
 
       &__icon {
