fixes for single space

--- a/app/blocks/map/map.scss
+++ b/app/blocks/map/map.scss
@@ -132,9 +132,10 @@
 
 .map-marker-label-circle-big {
   border-radius: 50%;
+  color: transparent !important;
   background-color: #fff;
-  width: 16px;
-  height: 16px;
+  width: 10px;
+  height: 10px;
 }
 
 .map-marker-tooltip {
