--- a/app/components/space-description/space-description-v2.scss
+++ b/app/components/space-description/space-description-v2.scss
@@ -126,7 +126,7 @@
     }
 
     &:not(:first-child) {
-      @include rule(padding-top, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 28));
+      @include rule(padding-top, (xl: 0, sm: 28));
     }
 
     .nd-results {
@@ -135,7 +135,7 @@
 
     .nd-section {
       &:not(:first-child) {
-        @include rule(padding-top, (xl: 30px, xlg: 30, lg: 30, md: 30, sm: 30));
+        @include rule(padding-top, (xl: 44px, xlg: 44, lg: 44, md: 44, sm: 30));
       }
 
       &__text {
@@ -148,7 +148,7 @@
 
       &__content {
         &:not(:first-child) {
-          @include rule(margin-top, (xl: 24px, xlg: 24, lg: 24, md: 24, sm: 24));
+          @include rule(margin-top, (xl: 34px, xlg: 34, lg: 34, md: 34, sm: 24));
         }
       }
 
