single offer page

--- a/app/blocks/avatar/avatar.scss
+++ b/app/blocks/avatar/avatar.scss
@@ -138,6 +138,11 @@
     }
   }
 
+  &_sz50 {
+    @include rule(width, (xl: 50px, xlg: 50, lg: 50, md: 50, sm: 50));
+    @include rule(height, (xl: 50px, xlg: 50, lg: 50, md: 50, sm: 50));
+  }
+
   &_sz104 {
     width: 104px;
     height: 104px;
