--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -107,6 +107,15 @@
       }
     }
 
+    &_question {
+      @include rule(width, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 16));
+      @include rule(height, (xl: 16px, xlg: 16, lg: 16, md: 16, sm: 16));
+
+      &:not(:last-child) {
+        @include rule(margin-right, (xl: 7px, xlg: 7, lg: 7, md: 7, sm: 7));
+      }
+    }
+
     &_nd-user {
       width: 13px;
       height: 13px;
