--- a/app/blocks/space-map/space-map.scss
+++ b/app/blocks/space-map/space-map.scss
@@ -74,6 +74,12 @@
         pointer-events: auto;
       }
     }
+
+    .offer-description & {
+      @include screen('sm', max, 2) {
+        position: static;
+      }
+    }
   }
 
   &__map {
