--- a/app/pages/newest/search/search-v3.pug
+++ b/app/pages/newest/search/search-v3.pug
@@ -92,16 +92,8 @@ block content
 
     +e.column_start._start_offer._popup(data-layout="offer")
       +e.wrapper.js-scrollbar-layout
-        +offer-description
-        +offer-description-panel()._abs.is-visible(data-offer-panel)
-          +e.offer
-            +space-type._gray.__type
-              +nd-box()._green.__box_sz7
-              +e.name PRIVATE OFFICE
-            +e.title 13 desks office space
-          +e.buttons
-            +nd-button._pad10._black.__button.js-nd-arrange-viewing(href="#nd-popup-arrange-viewing" data-min-date="2021-15-4" data-max-date="2021-20-8") Arrange viewing
-            +nd-button._pad10.__button(href="#") Request reservation
+        +offer-description-v2
+
     +e.column_header._popup(data-layout="space,offer,list")
       +layout-header({type: 'space', popup: true})._main
       +layout-header({type: 'list', popup: true})._sort
