--- a/app/pages/newest/single-offer/single-offer.pug
+++ b/app/pages/newest/single-offer/single-offer.pug
@@ -21,7 +21,7 @@ block content
   +layout._stable._stable_centered
     +e.column_start._start_offer(data-layout="offer")
       +e.wrapper
-        +offer-description
+        +offer-description-v2(true)
 
     +e.column_header(data-layout="offer")
       +layout-header({type: 'page', popup: true, offer: true})._main._page._centered
