--- a/app/pages/newest/sitemap/redesign-sitemap.pug
+++ b/app/pages/newest/sitemap/redesign-sitemap.pug
@@ -43,11 +43,10 @@ block content
             +e.head
               +page-title June 2021 updates
             +e.list
-              +nd-link(href="search-v3.html") Spacepool - Search (search-v3.html)
+              //- +nd-link(href="search-v3.html") Spacepool - Search (search-v3.html)
               //- +nd-link(href="search-types-v3.html") Spacepool - Search by offer type (search-types-v3.html)
               +nd-link(href="space-v5.html") Spacepool - Space (space-v5.html)
-              +nd-link(href="space-v5_nolayout.html") Spacepool - Space  without offer layout (space-v5_nolayout.html)
-              //- +nd-link(href="single-offer.html") Spacepool - Single Offer Page (single-offer.html)
+              +nd-link(href="single-offer.html") Spacepool - Single Offer Page (single-offer.html)
 
           +e.group#nd-new-search
             +e.head
