--- a/app/components/layout/layout.scss
+++ b/app/components/layout/layout.scss
@@ -676,6 +676,20 @@
           @include cRule(width, (xl: calc(100% - 58.49vw), lg: calc(100% - 52.93vw), md: calc(100% - 68.75vw), sm: 0));
           @include rule(box-shadow, (xl: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), false), xlg: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), 1660), lg: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), 1366), md: boxShadow(0, 4, 12, 0, rgba(0, 0, 0, .25), 960), sm: none));
         }
+
+        &_popup {
+          position: fixed;
+
+          &.layout__column_start {
+            width: 100%;
+
+            @include cRule(padding-right, (xl: calc(100% - 58.49vw), lg: calc(100% - 52.93vw), md: calc(100% - 68.75vw), sm: 0));
+
+            .layout__wrapper {
+              max-height: 100%;
+            }
+          }
+        }
       }
     }
 
@@ -689,9 +703,16 @@
           &_start {
             width: 100%;
             border-right: none;
+            max-height: none;
 
             @include rule(max-width, (xl: 1164px, xlg: 1164, lg: 1164, md: 100%));
             @include rule(padding, (xl: 0 50px, xlg: 0 50, lg: 0 50, md: 0, sm: 0));
+
+            .layout__wrapper {
+              @include rule(padding-top, (xl: 95px, xlg: 95, lg: 95, md: 60, sm: 60));
+              @include rule(padding-left, (xl: 0, md: 50, sm: 20));
+              @include rule(padding-right, (xl: 0, md: 40, sm: 20));
+            }
           }
 
           &_header {
